--- a/build.gradle
+++ b/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     
     // https://mvnrepository.com/artifact/org.apache.hadoop/hadoop-client
 	compile group: 'org.apache.hadoop', name: 'hadoop-client', version: '2.7.5'
+	
+	// https://mvnrepository.com/artifact/com.google.code.gson/gson
+	compile group: 'com.google.code.gson', name: 'gson', version: '2.8.2'
 }
